Adding the alert box

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link  rel="stylesheet" href="./main.css">
+    <link  rel="stylesheet" href="./resources/main.css">
 </head>
 <body>
     <script>
@@ -35,6 +35,6 @@
     <div>
         <center><p id="message"></p></center>
     </div>
-    <script src="main.js"></script>
+    <script src="./resources/main.js"></script>
 </body>
 </html>
