Changing buttons to images

--- a/index.html
+++ b/index.html
@@ -15,21 +15,26 @@
     <h1><center>Score: <em id="player">0</em>:<em id="computer">0</em></center></h1>
     <div id="container">
         <div class="float-child">
+            <br>
             <center>
-                <button class="btn" onclick="game('Rock');">Rock</button>
+                <img src="./images/rock.jpg" alt="rock.jpg" onclick="game('Rock');">
                 <br><br>
-                <button class="btn" onclick="game('Paper');">Paper</button>
+                <img src="./images/paper.jpg" alt="paper.jpg" onclick="game('Paper');">
                 <br><br>
-                <button class="btn" onclick="game('Scissors');">Scissors</button></center>
+                <img src="./images/scissors.jpg" alt="scissors.jpg" onclick="game('Scissors');">
+            </center>
+            <br>
         </div>
         <div class="float-child">
+            <br>
             <center>
-                <button id="r">Rock</button>
+                <img src="./images/rock.jpg" alt="rock.jpg">
                 <br><br>
-                <button id="p">Paper</button>
+                <img src="./images/paper.jpg" alt="paper.jpg">
                 <br><br>
-                <button id="s">Scissors</button>
+                <img src="./images/scissors.jpg" alt="scissors.jpg">
             </center>
+            <br>
         </div>
     </div>
     <div>
