--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         var counterComputer;
     </script>
     <h1><center>Score: <em id="player">0</em>:<em id="computer">0</em></center></h1>
-    <p style="color: white;">Click the images to play!</p>
+    <p>Click the images to play!</p>
     <div id="container">
         <div class="float-child">
             <br>
